--- a/index.html
+++ b/index.html
@@ -1,70 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-<style>
-  div.container {
-    width: 100%;
-    border: 38px solid black;
-}
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-header, footer {
-    padding: 1em;
-    color: black;
-    background-color: aqua;
-    clear: left;
-    text-align: center;
-}
-
-nav {
-    float: left;
-    max-width: 160px;
-    margin: 0;
-    padding: 1em;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-   
-nav ul a {
-    text-decoration: none;
-}
-
-article {
-    margin-left: 170px;
-    border-left: 18px solid black;
-    padding: 1em;
-    overflow: hidden;
-}
-</style>
-</head>
 <body>
+  <div class="container">
+    <section class="row">
+      <section class="col-sm-12">
+        <h1>iTunes</h1>
+        <div class="form-inline">
+          <div class="form-group">
+            <label for="search">Search:</label>
+            <input type="text" class="form-control" id="search">
+          </div>
+          <button id="submit" class="btn btn-default">Search</button>
+        </div>
+      </section>
+    </section>
+    <hr>
+    <section id="results" class="row">
+      <!-- results go here -->
+    </section>
+  </div>
 
-<div class="container">
-
-<header>
-   <h1>Jay Schroeder</h1>
-</header>
-  
-<nav>
-  <ul>
-    <li><a href="index2.html">Contact Info</a></li>
-    <li><a href="index3.html">Portfolio</a></li>
-    <li><a href="index4.html">pWn'd</a></li>
-  </ul>
-</nav>
-
-<article>
-  <h1>Here's a little bit about me</h1>
-  <p>I have been apart of the IT and the development industry for the last 6 years..</p>
-  <p>My next stop on this journey lies within the development field</p>
-</article>
-
-<footer><p class="boldClass"</p><a href="https://www.linkedin.com/in/jay-schroeder-90732219
-"target="blank">LinkedIn Profile</a></footer>
-
-</div>
-
+  <script src="jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 </body>
 </html>
